src/test/ui/const-generics/issues/issue-90318.stderr
error[E0277]: can't compare `TypeId` with `_` in const contexts
  --> $DIR/issue-90318.rs:14:28
   |
LL |     If<{ TypeId::of::<T>() != TypeId::of::<()>() }>: True,
   |                            ^^ no implementation for `TypeId == _`
   |
   = help: the trait `~const PartialEq<_>` is not implemented for `TypeId`
note: the trait `PartialEq<_>` is implemented for `TypeId`, but that implementation is not `const`
  --> $DIR/issue-90318.rs:14:28
   |
LL |     If<{ TypeId::of::<T>() != TypeId::of::<()>() }>: True,
   |                            ^^

error[E0277]: can't compare `TypeId` with `_` in const contexts
  --> $DIR/issue-90318.rs:21:28
   |
LL |     If<{ TypeId::of::<T>() != TypeId::of::<()>() }>: True,
   |                            ^^ no implementation for `TypeId == _`
   |
   = help: the trait `~const PartialEq<_>` is not implemented for `TypeId`
note: the trait `PartialEq<_>` is implemented for `TypeId`, but that implementation is not `const`
  --> $DIR/issue-90318.rs:21:28
   |
LL |     If<{ TypeId::of::<T>() != TypeId::of::<()>() }>: True,
   |                            ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
